# vita_gl_test

./: CMakeLists.txt  README.md
include/EGL/: eglplatform.h
src/: main.c  main.cpp
